Update input/button padding to fix cutoff text in Windows Chrome

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -299,9 +299,9 @@ $table-dark-color:           $body-bg !default;
 //
 // For each of Bootstrap's buttons, define text, background and border color.
 
-$input-btn-padding-y:       .5rem !default;
+$input-btn-padding-y:       .375rem !default;
 $input-btn-padding-x:       .75rem !default;
-$input-btn-line-height:     1.25 !default;
+$input-btn-line-height:     1.5 !default;
 
 $input-btn-padding-y-sm:    .25rem !default;
 $input-btn-padding-x-sm:    .5rem !default;
